Compilation_Racket_Mips/piton/tests/errors/if_else_conflict.py
if True:
    a: int = 1
else:
    a: str = "ABC"
